Bug 395412 - SVG text tool not selectable and text not editable when text has been moved inside an hidden group (made then visible)
Summary: SVG text tool not selectable and text not editable when text has been moved i...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Text (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: investigated, triaged
Depends on:
Blocks:
 
Reported: 2018-06-15 06:48 UTC by mvowada
Modified: 2018-10-10 09:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Video Example (1.12 MB, video/mp4)
2018-06-15 06:48 UTC, mvowada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mvowada 2018-06-15 06:48:57 UTC
Created attachment 113334 [details]
Video Example

Krita: 4.1.0-pre-alpha (git b01e10e) - Ubuntu 14.04 Unity

Hide a group, put text inside, switch to another tool, unhide the group and text is now not editable.

Steps:

    1. CTRL + N
    2. CTRL + G and hide
    3. create text outside group
    4. move text inside group
    5. B key (switch to another tool)
    6. unhide group
    7. try to select the SVG text tool

Actual Results: SVG text tool not selectable and text not editable.
Expected Results: edit text.

NOTE: in my case, "Enter" will unblock.
Comment 1 Tiar 2018-10-02 15:32:32 UTC
Version: 4.2.0-pre-alpha (git 5120b70) on Windows 10
Qt Version: 5.9.3



1) Not only the Text Tool, but other vector tools (Calligraphy and Edit Shapes Tool) are not selectable. You not only cannot edit text, but also create a calligraphy path or edit shapes. Only the arrow tool (select shapes) works. On a normal, working vector layer, every one of those three tools can be selected and used.

2) Enter and clicking on the text a few times will unblock Text Tool, doesn't unblock others (see 1.), so the bug is still there, but text tool is possible to be reached

3) The most essential part is to move a layer (visible) to the hidden group and then un-hide group and checking the things mentioned. 

- a) hide the group, b) move the layer into the layer, c) unhide the group: BUG

- a) hide the group, b) move the layer into the layer, c) unhide the group, d) move the layer outside of the group: NO BUG

- a) move the layer into the group (visible), b) hide the group, c) unhide the group: NO BUG
Comment 2 Dmitry Kazakov 2018-10-03 07:56:23 UTC
Git commit 792b9f89944e8f5117a3859c1d922896b0b921ae by Dmitry Kazakov.
Committed on 03/10/2018 at 07:56.
Pushed by dkazakov into branch 'master'.

Fix lockness vector tools after a node being transitively locked by a group

There is a weird synchronizations mechanism between flake layer
system and Krita layer system. The patch just makes it a little bit
more consistent.

M  +0    -2    libs/image/kis_base_node.cpp
M  +0    -11   libs/image/kis_base_node.h
M  +1    -0    libs/image/kis_node.cpp
M  +6    -0    libs/image/kis_node.h
M  +0    -1    libs/image/kis_selection_mask.cpp
M  +2    -2    libs/ui/canvas/kis_canvas2.cpp
M  +21   -19   libs/ui/flake/kis_node_shape.cpp
M  +0    -1    libs/ui/flake/kis_node_shape.h

https://commits.kde.org/krita/792b9f89944e8f5117a3859c1d922896b0b921ae
Comment 3 Halla Rempt 2018-10-10 09:42:44 UTC
Git commit 90bdcc003ae61d8f60fdcd0cd80f2f57f0a3401f by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 10/10/2018 at 07:36.
Pushed by rempt into branch 'krita/4.1'.

Fix lockness vector tools after a node being transitively locked by a group

There is a weird synchronizations mechanism between flake layer
system and Krita layer system. The patch just makes it a little bit
more consistent.
(cherry picked from commit 792b9f89944e8f5117a3859c1d922896b0b921ae)

M  +0    -2    libs/image/kis_base_node.cpp
M  +0    -11   libs/image/kis_base_node.h
M  +1    -0    libs/image/kis_node.cpp
M  +6    -0    libs/image/kis_node.h
M  +0    -1    libs/image/kis_selection_mask.cpp
M  +2    -2    libs/ui/canvas/kis_canvas2.cpp
M  +21   -19   libs/ui/flake/kis_node_shape.cpp
M  +0    -1    libs/ui/flake/kis_node_shape.h

https://commits.kde.org/krita/90bdcc003ae61d8f60fdcd0cd80f2f57f0a3401f