Fix lockness vector tools after a node being transitively locked by a group

There is a weird synchronizations mechanism between flake layer
system and Krita layer system. The patch just makes it a little bit
more consistent.

BUG:395412
(cherry picked from commit 792b9f89944e8f5117a3859c1d922896b0b921ae)