libs/image/kis_base_node.h
@@ -554,17 +554,6 @@ protected:
     virtual KisKeyframeChannel * requestKeyframeChannel(const QString &id);
 
 Q_SIGNALS:
-
-    /**
-     * This signal is emitted when the visibility of the layer is changed with \ref setVisible.
-     */
-    void visibilityChanged(bool);
-
-    /**
-     * This signal is emitted when the node is locked or unlocked with \ref setUserLocked.
-     */
-    void userLockingChanged(bool);
-
     void keyframeChannelAdded(KisKeyframeChannel *channel);
 
 private:
